--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="style.css" type="text/css" />
+<link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 
 <body>
